--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kirsten Bussière
 description: MA Candidate in English Literature and Digital Humanities
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/kirstenbussiere/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/31580437?s=400&u=ce9c1bd1253a843293bc35e2626068a010b45784&v=4
 
 #
 # Flags below are optional
